docs/api/qiskit/0.25/qiskit.providers.aer.library.SaveExpectationValue.mdx
---
title: SaveExpectationValue
description: API reference for qiskit.providers.aer.library.SaveExpectationValue
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.library.SaveExpectationValue
---

# qiskit.providers.aer.library.SaveExpectationValue

<Class id="qiskit.providers.aer.library.SaveExpectationValue" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.8/qiskit/providers/aer/library/save_instructions/save_expectation_value.py" signature="SaveExpectationValue(operator, label='expectation_value', unnormalized=False, pershot=False, conditional=False)">
  Save expectation value of an operator.

  Instruction to save the expectation value of a Hermitian operator.

  The expectation value of a Hermitian operator $H$ for a simulator in quantum state :math\`rho\`is given by $\langle H\rangle = \mbox{Tr}[H.\rho]$.

  **Parameters**

  *   **operator** ([*Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")  *or*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")  *or*[*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Hermitian operator.
  *   **label** (*str*) – the key for retrieving saved data from results.
  *   **unnormalized** (*bool*) – If True return save the unnormalized accumulated or conditional accumulated expectation value over all shot \[Default: False].
  *   **pershot** (*bool*) – if True save a list of expectation values for each shot of the simulation rather than the average over all shots \[Default: False].
  *   **conditional** (*bool*) – if True save the average or pershot data conditional on the current classical register values \[Default: False].

  **Raises**

  **ExtensionError** – if the input operator is invalid or not Hermitian.

  <Admonition title="Note" type="note">
    This instruction can be directly appended to a circuit using the [`save_expectation_value()`](qiskit.providers.aer.library.save_expectation_value "qiskit.providers.aer.library.save_expectation_value") circuit method.
  </Admonition>

  ### \_\_init\_\_

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.__init__" signature="__init__(operator, label='expectation_value', unnormalized=False, pershot=False, conditional=False)">
    Instruction to save the expectation value of a Hermitian operator.

    The expectation value of a Hermitian operator $H$ for a simulator in quantum state :math\`rho\`is given by $\langle H\rangle = \mbox{Tr}[H.\rho]$.

    **Parameters**

    *   **operator** ([*Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")  *or*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")  *or*[*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Hermitian operator.
    *   **label** (*str*) – the key for retrieving saved data from results.
    *   **unnormalized** (*bool*) – If True return save the unnormalized accumulated or conditional accumulated expectation value over all shot \[Default: False].
    *   **pershot** (*bool*) – if True save a list of expectation values for each shot of the simulation rather than the average over all shots \[Default: False].
    *   **conditional** (*bool*) – if True save the average or pershot data conditional on the current classical register values \[Default: False].

    **Raises**

    **ExtensionError** – if the input operator is invalid or not Hermitian.

    <Admonition title="Note" type="note">
      This instruction can be directly appended to a circuit using the [`save_expectation_value()`](qiskit.providers.aer.library.save_expectation_value "qiskit.providers.aer.library.save_expectation_value") circuit method.
    </Admonition>
  </Function>

  ## Methods

  |                                                                                                                                                                                       |                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.providers.aer.library.SaveExpectationValue.__init__ "qiskit.providers.aer.library.SaveExpectationValue.__init__")(operator\[, label, unnormalized, …])           | Instruction to save the expectation value of a Hermitian operator.       |
  | [`add_decomposition`](#qiskit.providers.aer.library.SaveExpectationValue.add_decomposition "qiskit.providers.aer.library.SaveExpectationValue.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.providers.aer.library.SaveExpectationValue.assemble "qiskit.providers.aer.library.SaveExpectationValue.assemble")()                                              | Return the QasmQobjInstruction for the intructions.                      |
  | [`broadcast_arguments`](#qiskit.providers.aer.library.SaveExpectationValue.broadcast_arguments "qiskit.providers.aer.library.SaveExpectationValue.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.providers.aer.library.SaveExpectationValue.c_if "qiskit.providers.aer.library.SaveExpectationValue.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.providers.aer.library.SaveExpectationValue.copy "qiskit.providers.aer.library.SaveExpectationValue.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.providers.aer.library.SaveExpectationValue.inverse "qiskit.providers.aer.library.SaveExpectationValue.inverse")()                                                 | Special case.                                                            |
  | [`is_parameterized`](#qiskit.providers.aer.library.SaveExpectationValue.is_parameterized "qiskit.providers.aer.library.SaveExpectationValue.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.providers.aer.library.SaveExpectationValue.mirror "qiskit.providers.aer.library.SaveExpectationValue.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.providers.aer.library.SaveExpectationValue.qasm "qiskit.providers.aer.library.SaveExpectationValue.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.providers.aer.library.SaveExpectationValue.repeat "qiskit.providers.aer.library.SaveExpectationValue.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.providers.aer.library.SaveExpectationValue.reverse_ops "qiskit.providers.aer.library.SaveExpectationValue.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`soft_compare`](#qiskit.providers.aer.library.SaveExpectationValue.soft_compare "qiskit.providers.aer.library.SaveExpectationValue.soft_compare")(other)                             | Soft comparison between gates.                                           |
  | [`validate_parameter`](#qiskit.providers.aer.library.SaveExpectationValue.validate_parameter "qiskit.providers.aer.library.SaveExpectationValue.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                                                                          |                                                                               |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.providers.aer.library.SaveExpectationValue.decompositions "qiskit.providers.aer.library.SaveExpectationValue.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.providers.aer.library.SaveExpectationValue.definition "qiskit.providers.aer.library.SaveExpectationValue.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.providers.aer.library.SaveExpectationValue.duration "qiskit.providers.aer.library.SaveExpectationValue.duration")                   | Get the duration.                                                             |
  | [`params`](#qiskit.providers.aer.library.SaveExpectationValue.params "qiskit.providers.aer.library.SaveExpectationValue.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.providers.aer.library.SaveExpectationValue.unit "qiskit.providers.aer.library.SaveExpectationValue.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.assemble" signature="assemble()">
    Return the QasmQobjInstruction for the intructions.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### mirror

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.params" signature="property params">
    return instruction params.
  </Function>

  ### qasm

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.soft_compare" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  ### unit

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

