docs/api/qiskit/0.33/qiskit.providers.aer.library.SaveExpectationValue.mdx
---
title: SaveExpectationValue (v0.33)
description: API reference for qiskit.providers.aer.library.SaveExpectationValue in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.library.SaveExpectationValue
---

# SaveExpectationValue

<Class id="qiskit.providers.aer.library.SaveExpectationValue" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.9/qiskit/providers/aer/library/save_instructions/save_expectation_value.py" signature="SaveExpectationValue(operator, label='expectation_value', unnormalized=False, pershot=False, conditional=False)" modifiers="class">
  Bases: `qiskit.providers.aer.library.save_instructions.save_data.SaveAverageData`

  Save expectation value of an operator.

  Instruction to save the expectation value of a Hermitian operator.

  The expectation value of a Hermitian operator $H$ for a simulator in quantum state :math\`rho\`is given by $\langle H\rangle = \mbox{Tr}[H.\rho]$.

  **Parameters**

  *   **operator** ([*Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")  *or*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.SparsePauliOp")  *or*[*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Hermitian operator.
  *   **label** (*str*) – the key for retrieving saved data from results.
  *   **unnormalized** (*bool*) – If True return save the unnormalized accumulated or conditional accumulated expectation value over all shot \[Default: False].
  *   **pershot** (*bool*) – if True save a list of expectation values for each shot of the simulation rather than the average over all shots \[Default: False].
  *   **conditional** (*bool*) – if True save the average or pershot data conditional on the current classical register values \[Default: False].

  **Raises**

  **ExtensionError** – if the input operator is invalid or not Hermitian.

  <Admonition title="Note" type="note">
    This instruction can be directly appended to a circuit using the [`save_expectation_value()`](qiskit.providers.aer.library.save_expectation_value "qiskit.providers.aer.library.save_expectation_value") circuit method.
  </Admonition>

  ## Methods

  <span id="qiskit-providers-aer-library-saveexpectationvalue-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.add_decomposition" signature="SaveExpectationValue.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.assemble" signature="SaveExpectationValue.assemble()">
    Return the QasmQobjInstruction for the intructions.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.broadcast_arguments" signature="SaveExpectationValue.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.c_if" signature="SaveExpectationValue.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-copy" />

  ### copy

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.copy" signature="SaveExpectationValue.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.inverse" signature="SaveExpectationValue.inverse()">
    Special case. Return self.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.is_parameterized" signature="SaveExpectationValue.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.mirror" signature="SaveExpectationValue.mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.qasm" signature="SaveExpectationValue.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.repeat" signature="SaveExpectationValue.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.reverse_ops" signature="SaveExpectationValue.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.soft_compare" signature="SaveExpectationValue.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-providers-aer-library-saveexpectationvalue-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.providers.aer.library.SaveExpectationValue.validate_parameter" signature="SaveExpectationValue.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.aer.library.SaveExpectationValue.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

